--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 <head>
-  <meta charset='UTF-8'>
-  <title>Fitness shop</title>
+    <meta charset='UTF-8'>
+    <title>Fitness shop</title>
     <link rel="stylesheet" href="css/reset.css" >
     <link rel='stylesheet' href="css/style.css">
 </head>
@@ -10,31 +10,30 @@
 <body>
 <div id="wrapper">
     <div class="header">
-      <img class="logo" src="img/logo.png" alt="LOGO">
-       <ul class="menu clearfix">
-         <li><a href="#">Главная</a></li>
-         <li><a href="#">Товары</a></li>
-         <li><a href="#">О_нас</a></li>
-         <li><a href="#">Контакты</a></li>
-       </ul>
+        <img class="logo" src="img/logo.png" alt="LOGO">
+        <ul class="menu clearfix">
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Товары</a></li>
+            <li><a href="#">О_нас</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
     </div>
 
 <div class="conteiner clearfix">
-
     <div class="sidebar">
-       <ul>
-         <li><a href="#">Ноутбуки</a></li>
-         <li><a href="#">Планшеты</a></li>
-         <li><a href="#">Телефоны</a></li>
-         <li><a href="#">Телевизоры</a></li>
-         <li><a href="#">Бытовая техника</a></li>
-         <li><a href="#">Автотовары</a></li>
-      </ul>
+        <ul>
+            <li><a href="#">Ноутбуки</a></li>
+            <li><a href="#">Планшеты</a></li>
+            <li><a href="#">Телефоны</a></li>
+            <li><a href="#">Телевизоры</a></li>
+            <li><a href="#">Бытовая техника</a></li>
+            <li><a href="#">Автотовары</a></li>
+        </ul>
     </div>
 
     <div class="content">
-      <img src="img/bike.png" alt="bike"/>
-      <p class="style">
+        <img src="img/bike.png" alt="bike"/>
+        <p class="style">
         Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є,
         фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку
         та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть,
@@ -42,20 +41,20 @@
         в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з
         Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker,
         які використовували різні версії Lorem Ipsum.
-      </p>
+        </p>
 	  </div>
 </div>
 
-    <div class="footer">
-      <ul class="menu2 clearfix">
+<div class="footer">
+    <ul class="menu2 clearfix">
         <li><a href="#">Главная</a></li>
         <li><a href="#">Товары</a></li>
         <li><a href="#">О_нас</a></li>
         <li><a href="#">Контакты</a></li>
         <li>2014 &copy; All rights reserved</li>
-      </ul>
-    </div>
+    </ul>
 </div>
- </body>
 
+</div>
+</body>
 </html>
