--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
         <div class="header">
-            <img class="logo" src="img/logo.png" alt="LOGO">
+            <a href="#"><img class="logo" src="img/logo.png" alt="LOGO"></a>
             <ul class="menu clearfix">
                 <li><a href="#">Главная</a></li>
                 <li><a href="#">Товары</a></li>
