--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset='UTF-8'>
     <title>Fitness shop</title>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext' rel='stylesheet'> -->
+    <link rel='stylesheet' href="css/fonts.css">
     <link rel="stylesheet" href="css/reset.css" >
     <link rel='stylesheet' href="css/style.css">
 </head>
 
 <body>
-    <div id="wrapper">
+    <div class="wrapper">
         <div class="header">
             <a href="#"><img class="logo" src="img/logo.png" alt="LOGO"></a>
             <ul class="menu clearfix">
